<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Settings"
    android:background="@color/colorBackground"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityScreens.MainActivity">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="0,2"
        android:id="@+id/tableLayout3">
        <TableRow>
            <ImageView
                android:src="@drawable/settings"
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:id="@string/settings"
                android:layout_column="1"
                android:text="@string/settings"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@string/settings_text"
                android:layout_column="0"
                android:layout_span="3"
                android:text=""
                android:textColor="#000000"
                />
        </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeSendData"
            android:textColor="#000000"
            android:paddingLeft="15dp"/>
        <Spinner
            android:id="@+id/timeRefreshMap"
            android:entries="@array/timeRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeRefreshMap"
            android:textColor="#000000"
            android:paddingLeft="15dp"/>
        <Spinner
            android:id="@+id/timeSendData"
            android:entries="@array/timeRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/go_results_screen"
        android:onClick="onClickSave"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>