<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/use_terms"
    android:background="@color/colorBackground"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityScreens.MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="0,2"
        android:id="@+id/tableLayout3">
        <TableRow>
            <ImageView
                android:src="@drawable/terms_conditions"
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:id="@string/nav_use_terms"
                android:layout_column="1"
                android:text="@string/nav_use_terms"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@string/intro"
                android:layout_column="1"
                android:text="@string/intro"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@string/use_terms_text"
                android:layout_column="0"
                android:layout_span="3"
                android:text="@string/use_terms_text"
                android:textColor="#000000"
                android:paddingLeft="15dp"
                />
        </TableRow>
    </TableLayout>
</RelativeLayout>